; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_cpuset.c_sys_cpuset_setid.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_cpuset.c_sys_cpuset_setid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.cpuset_setid_args = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_cpuset_setid(%struct.thread* %0, %struct.cpuset_setid_args* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.cpuset_setid_args*, align 8
  store %struct.thread* %0, %struct.thread** %3, align 8
  store %struct.cpuset_setid_args* %1, %struct.cpuset_setid_args** %4, align 8
  %5 = load %struct.thread*, %struct.thread** %3, align 8
  %6 = load %struct.cpuset_setid_args*, %struct.cpuset_setid_args** %4, align 8
  %7 = getelementptr inbounds %struct.cpuset_setid_args, %struct.cpuset_setid_args* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.cpuset_setid_args*, %struct.cpuset_setid_args** %4, align 8
  %10 = getelementptr inbounds %struct.cpuset_setid_args, %struct.cpuset_setid_args* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.cpuset_setid_args*, %struct.cpuset_setid_args** %4, align 8
  %13 = getelementptr inbounds %struct.cpuset_setid_args, %struct.cpuset_setid_args* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @kern_cpuset_setid(%struct.thread* %5, i32 %8, i32 %11, i32 %14)
  ret i32 %15
}

declare dso_local i32 @kern_cpuset_setid(%struct.thread*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
